--- a/css/main.css
+++ b/css/main.css
@@ -164,7 +164,6 @@ li {
     width: 100%;
     margin: 0;
     padding: 0;
-    /* background: url(../img/nav_bg.png) no-repeat; */
     list-style: none;
     display: flex;
     justify-content: center;
@@ -173,8 +172,7 @@ li {
 .menu_item {
     float: left;
     width: 14%;
-    display: flex;
-  margin: 20px 40px;
+    margin: 1em 2em 1em;  
 }
 .menu_item a {
     text-decoration: none;
@@ -184,6 +182,7 @@ li {
     float: left;
     display: block;
     text-align: center;
+    justify-content: center;
 } 
 .menu a.activ_menu {
     color: #af2330;
@@ -540,4 +539,33 @@ If the screen width is less than 600 pixels, hide all links except the first («
       text-align: left;
     }
 }
+
+
+@media screen and (max-width: 900px) {
+    .services_item {
+        float: left;
+        width: 50%;
+        border-right: transparent;
+    }
+
+@media screen and (max-width: 800px) {
+    .services_item, .map_item {
+        float: left;
+        width: 50%;
+        border-right: transparent;
+    }
+    .map_item:nth-child(3){
+        float: right;
+    }
+    .content_item {
+        margin: 0 auto;
+        float: none;
+        width: 100%;
+    }   
+    body {
+        padding: 0;
+        margin: 0 auto;
+    } 
+}
+
 
